# phab-pharmacy

./: .editorconfig  .gitignore  .prettierrc  .yarnrc.yml  CONTIBUTING.md  CONTRIBUTING.md  Procfile  README.md  lint-staged.config.js  nixpacks.toml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind-workspace-preset.js  tsconfig.base.json
.github/workflows/: backend-railway-deploy.yml  ci.yml  deploy-heroku.yml  general.yml  setup-yarn.yml
apps/admin/: .env  .eslintrc.json  README.md  jest.config.ts  next.config.js  project.json  tailwind.config.js  tsconfig.json
apps/admin-dashboard/: .eslintrc.json  jest.config.ts  project.json  tailwind.config.js  tsconfig.json
apps/admin-dashboard-e2e/: project.json
apps/admin-e2e/: project.json
apps/assistant/: README.md  project.json  pyproject.toml
apps/backend/: .babelrc.js  .env  .env.template  .gitignore  Procfile  README.md  datasource.js  index.js  medusa-config.js  package-lock.json  package.json  project.json  tsconfig.app.json
apps/bank-api-tester/: .eslintrc.json  jest.config.ts  next.config.js  project.json  tsconfig.json
apps/mobile-app/: .env  README.md  babel.config.json  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  project.json  test-setup.js  tsconfig.app.json
apps/mobile-app-e2e/: .detoxrc.json  project.json
apps/online-store/: .env.template  .eslintrc.json  env.mjs  (+6 more)
apps/online-store-e2e/: project.json
proj1/: .coverage  README.md  project.json  pyproject.toml
proj1/pymonorepo_proj1/: hello.py
proj1/tests/: test_hello.py
tools/: prepare-backend.sh
(+426 files in other folders)
